# playground

./: .dockerignore  .env.example  .pre-commit-config.yaml  README.md  api.Dockerfile  default.conf  docker-compose.yaml  fly.toml  mongo-docker-compose.yaml  pyproject.toml  result.json  web.Dockerfile
api/: enums.py  responses.py  routes.py  schema.py  services.py  settings.py
api/tasks/: csv_reformer.py  school_2024_01_31.csv
docs/: initialize.md  pre-commit.md
web/: .env.example  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/src/: app.css
web/src/lib/: interfaces.ts  store.ts
web/src/lib/components/: School.svelte  SchoolView.svelte
web/src/routes/: +page.svelte
web/src/routes/demo/: +page.server.ts  +page.svelte
