[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["d3fau1t <aciddust20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
orjson = "^3.9.15"
aiohttp = "^3.9.3"
pydantic-settings = "^2.2.1"
motor = "^3.3.2"
uvicorn = "^0.28.0"
async-lru = "^2.0.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "playground, api"
known_third_party = "fastapi,pydantic,orjson,motor"
